# gstreamer_examples

./: .gitignore  README.md
gstAppSinkSrc-0.10/src/: CMakeLists.txt  gstMain.c  gstMain.c-bak
gstAppSinkSrc-1.0/: gstAppSinkSrc.sublime-project
gstAppSinkSrc-1.0/src/: CMakeLists.txt  gstMain.c
gstHelloWorld/src/: CMakeLists.txt  gstMain.c
